# webserv

./: .gitignore  AllServers.cpp  AllServers.hpp  AllowedStd.h  AllowedStd.hpp  Answer.cpp  Answer.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Help.cpp  Help.hpp  Makefile  Message.cpp  Message.hpp  MimeTypes.cpp  MimeTypes.hpp  ResponseHandler.cpp  ResponseHandler.hpp  Select.cpp  Select.hpp  Server.cpp  Server.hpp  StatusCodes.cpp  StatusCodes.hpp  UriParser.cpp  UriParser.hpp  main.cpp  main_l.cpp  webserv  webserv.hpp
config/: Config.cpp  Config.h  Config.hpp  Section.cpp  Section.h  Section.hpp  config_analizator.hpp
config/detail/: Node.h  Node.hpp  Parser.cpp  Parser.h  Parser.hpp
config/exceptions/: ConfigException.cpp  ConfigException.h  ConfigException.hpp  ParseException.cpp  ParseException.h  ParseException.hpp  PathException.cpp  PathException.h  PathException.hpp  ValueException.cpp  ValueException.h  ValueException.hpp
examples/: browser.config  commands_examples  configuration.config  curl_examples  example.config  first.config  for_tester.config  simple.config  tests.http
examples/http/: get_cgi.http
html-errors/: 400.html  408.html  409.html  410.html  418.html  431.html  501.html  503.html  504.html  505.html
http/: Answer.cpp  Answer.hpp  CgiHandler.cpp  CgiHandler.hpp  CgiProcess.cpp  CgiProcess.hpp  Client.cpp  Client.hpp  Message.cpp  Message.hpp  MimeTypes.cpp  RequestParser.cpp  RequestParser.h  ResponseHandler.cpp  ResponseHandler.hpp  StatusCodes.cpp
http/parsers/: RequestParser.cpp  RequestParser.hpp  UriParser.cpp  UriParser.hpp
log/: Formatters.cpp  Formatters.h  Formatters.hpp  Level.cpp  Level.h  Log.h  Log.hpp
log/detail/: LoggerBase.cpp  LoggerBase.h  LoggerBase.hpp  Message.cpp  Message.h
log/handlers/: AHandler.h  AHandler.hpp  ColorConsoleHandler.cpp  ColorConsoleHandler.h  ColorConsoleHandler.hpp  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleHandler.hpp  FileHandler.cpp  FileHandler.h  FileHandler.hpp
server/: AllServers.cpp  AllServers.hpp  Select.cpp  Select.hpp  Server.cpp  Server.hpp  webserv.hpp
util/: File.cpp  File.h  File.hpp  NonCopyable.h  Singleton.h  Singleton.hpp  String.cpp  String.h  String.hpp
webserv/: Answer.cpp  Answer.hpp  Message.hpp  main.cpp  webserv.hpp
www/: index.html
www/YoupiBanane/: nebla.txt
www/pages/: 401.html  403.html  404.html  405.html  408.html  415.html  418.html  429.html  451.html  500.html  502.html  lalal.txt  test.txt
www/php/: form.html  form_get.html  form_post.html  index.php  send_info.php
www_2/: index.html  numbers.txt
www_2/pages/: 404.html  411.html  413.html  414.html  index_2.html
